--- a/grasse/src/main/webapp/WEB-INF/web.xml
+++ b/grasse/src/main/webapp/WEB-INF/web.xml
@@ -3,28 +3,36 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 	
-  <welcome-file-list>
-    <welcome-file>/WEB-INF/views/main.jsp</welcome-file>
-  </welcome-file-list>
+	<welcome-file-list>
+		<welcome-file>/WEB-INF/views/main.jsp</welcome-file>
+	</welcome-file-list>
    
-  <filter>
-    <filter-name>encodingFilter</filter-name>
-    <filter-class>
-            org.springframework.web.filter.CharacterEncodingFilter
+	<!-- 문자 인코딩 시작 -->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>
+			org.springframework.web.filter.CharacterEncodingFilter
         </filter-class>
     <init-param>
-      <param-name>encoding</param-name>
-      <param-value>utf-8</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>encodingFilter</filter-name>
-    <url-pattern>*.do</url-pattern>
-  </filter-mapping>
+		<param-name>encoding</param-name>
+		<param-value>utf-8</param-value>
+	</init-param>
+	<init-param>
+		<param-name>forceEncoding</param-name>
+		<param-value>true</param-value>
+	</init-param>
+	</filter>
+
+
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>*.do</url-pattern>
+	</filter-mapping>
+	<!-- 문자 인코딩 끝 -->
    
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
    
 	<servlet>
 		<servlet-name>action</servlet-name>
